<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/black"
    tools:context=".ScoreActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/game_over"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtNewScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="00"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_score"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtHighScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/btnAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/play_again"
        android:background="@drawable/btn_back"
        android:padding="18dp"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_back"
        android:padding="18dp"
        android:text="@string/menu"
        android:textSize="25sp"
        android:textStyle="bold" />


</LinearLayout>